tests/ui/issues/issue-51116.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-51116.rs:5:13
   |
LL |             *tile = 0;
   |             ^^^^^ cannot infer type

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0282`.
